edit git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -195,5 +195,5 @@ pip-selfcheck.json
 # End of https://www.gitignore.io/api/venv,react,flask,python,virtualenv
 
 # log
-log/
-.log
+# log/
+*.log.*
